--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "react": "^19.0.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2"
