--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,33 +2,31 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main]   # run every time you push to main
+    branches: [main]                # run on every push to main
 
 permissions:
-  contents: write      # allow Action to push to gh-pages
+  contents: write                   # allow the Action to push
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: "npm"
 
       - name: Install deps
-        run: npm ci
+        run: npm ci                 # or pnpm install / yarn install
 
-      - name: Build static site
-        run: npm run build           # produces the /out folder
+      - name: Build & export static site
+        run: npm run deploy         # makes the /out folder
 
       - name: Publish to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./out
+          publish_dir: ./out        # push ./out to the gh-pages branch
