--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "good-days-dashboard",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-      "dev":    "next dev",
-      "build":  "next build",
-      "export": "next export -o out",     
-      "deploy": "npm run build && npm run export"
-  },
+"scripts": {
+  "build":  "next build --no-lint",
+  "export": "next export -o out",
+  "deploy": "npm run build && npm run export"
+},
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-label": "^2.1.4",
