--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
 "scripts": {
   "build":  "next build --no-lint",
-  "export": "next export -o out",
-  "deploy": "npm run build && npm run export"
+  "export": "next export",
+  "deploy": "npm run build && npm run export",
+  "build":  "next build --no-lint",
+  "deploy": "npm run build"
 },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.10",
