--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,42 +4,38 @@ on:
   push:
     branches: [main]
 
-# required permissions for the Pages actions
 permissions:
   contents: read
   pages: write
   id-token: write
 
 concurrency:
-  group: "pages"
+  group: pages
   cancel-in-progress: true
 
 jobs:
-  # 1) Build the static site and upload it as an artifact
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
+          cache: npm
 
       - name: Install deps
         run: npm ci
 
       - name: Build static site
-        run: npm run build        # writes ./out because of next.config.js
+        run: npm run build          # writes ./out
 
       - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3   # ← new major
         with:
-          path: ./out             # folder to publish
+          path: ./out                            # same as before
 
-  # 2) Deploy the artifact to GitHub Pages
   deploy:
-    needs: build                 # wait for build job
+    needs: build
     runs-on: ubuntu-latest
     environment:
       name: github-pages
@@ -48,4 +44,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deploy
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v4            # unchanged
